force-app/main/default/objects/aig_AI_Use_Case_Test__c/aig_AI_Use_Case_Test__c.object-meta.xml
<CustomObject>
    <label>AI Use Case Test</label>
    <nameField>
        <displayFormat>TST-{0000000}</displayFormat>
        <label>Test Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Use Case Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>