force-app/main/default/objects/aig_AI_Use_Case_Test__c/fields/aig_AI_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>aig_AI_Lifecycle_Stage__c</fullName>
    <label>AI Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Feasibility</fullName>
            </value>
            <value>
                <fullName>Data Collection</fullName>
            </value>
            <value>
                <fullName>Data Preprocessing</fullName>
            </value>
            <value>
                <fullName>Model Development</fullName>
            </value>
            <value>
                <fullName>Model Training</fullName>
            </value>
            <value>
                <fullName>Model Evaluation</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Ongoing Monitoring</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>