force-app/main/default/objects/aig_AI_Use_Case_Test__c/fields/aig_Conducted_By__c.field-meta.xml
<CustomField>
    <fullName>aig_Conducted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conducted By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>aig_AI_Use_Case_Stakeholder__c.aig_AI_Use_Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.aig_AI_Use_Case__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>aig_AI_Use_Case_Stakeholder__c</referenceTo>
    <relationshipLabel>Tests</relationshipLabel>
    <relationshipName>aig_AI_Use_Case_Tests</relationshipName>
    <type>Lookup</type>
</CustomField>