force-app/main/default/objects/aig_AI_Use_Case_Test__c/fields/aig_Date_Conducted__c.field-meta.xml
<CustomField>
    <fullName>aig_Date_Conducted__c</fullName>
    <label>Date Conducted</label>
    <type>Date</type>
</CustomField>