force-app/main/default/objects/aig_AI_Use_Case_Test__c/fields/aig_Description__c.field-meta.xml
<CustomField>
    <fullName>aig_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>