force-app/main/default/objects/aig_AI_Use_Case_Test__c/fields/aig_Expected_Outcome__c.field-meta.xml
<CustomField>
    <fullName>aig_Expected_Outcome__c</fullName>
    <label>Expected Outcome</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>