force-app/main/default/objects/aig_AI_Use_Case_Test__c/fields/aig_Objective__c.field-meta.xml
<CustomField>
    <fullName>aig_Objective__c</fullName>
    <label>Objective</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>