force-app/main/default/objects/aig_AI_Use_Case_Test__c/fields/aig_Related_Artifacts__c.field-meta.xml
<CustomField>
    <fullName>aig_Related_Artifacts__c</fullName>
    <inlineHelpText>A reference to any supporting documentation or evidence generated during the test, such as test scripts, log files, or screenshots. This facilitates transparency and allows for independent verification of test results.</inlineHelpText>
    <label>Related Artifacts</label>
    <type>TextArea</type>
</CustomField>