force-app/main/default/objects/aig_AI_Use_Case_Test__c/fields/aig_Risk_Addressed__c.field-meta.xml
<CustomField>
    <fullName>aig_Risk_Addressed__c</fullName>
    <inlineHelpText>A clear linkage between the test being performed and the specific AI risks it is designed to mitigate. For example, a test evaluating the robustness of an AI model against adversarial examples would be linked to the risk of malicious actors attempting to manipulate the model’s behavior.</inlineHelpText>
    <label>Risk Addressed</label>
    <type>TextArea</type>
</CustomField>