force-app/main/default/objects/aig_AI_Use_Case_Test__c/fields/aig_Test_Data_Used__c.field-meta.xml
<CustomField>
    <fullName>aig_Test_Data_Used__c</fullName>
    <label>Test Data Used</label>
    <type>TextArea</type>
</CustomField>