force-app/main/default/objects/aig_AI_Use_Case_Test__c/fields/aig_Test_Results__c.field-meta.xml
<CustomField>
    <fullName>aig_Test_Results__c</fullName>
    <label>Test Results</label>
    <type>TextArea</type>
</CustomField>