force-app/main/default/objects/aig_AI_Use_Case_Test__c/fields/aig_Type__c.field-meta.xml
<CustomField>
    <fullName>aig_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Functional</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Regression</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Bias and Fairness</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Usability</fullName>
            </value>
            <value>
                <fullName>Stress</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>A/B Testing</fullName>
            </value>
            <value>
                <fullName>Exploratory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>